gitops/kustomize/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: identity
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/component: identity
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
